$Header$
===============================================================

187	Luke Howard <lukeh@padl.com>

	* make bogusSd in ldap-nss.c conditional on
	  !HAVE_LDAP_LD_FREE
	* merge in paged result support from Max Caines
	* bugfixes for Debian Bug report #140854

186	Luke Howard <lukeh@padl.com>

	* incorporated patch for Debian Bug report #140854,
	  where nss_ldap could in some cases close a
	  descriptor it did not own. Patch was provided
	  by Luca Filipozzi.

185	Luke Howard <lukeh@padl.com>

	* updated copyrights
	* fix for bug #82: set close on exec (Debian bug 136953)

184	Luke Howard <lukeh@padl.com>

	* return NSS_TRYAGAIN if no buffer space in ldap-grp.c

183	Luke Howard <lukeh@padl.com>

	* return error strings in AIX authentication routine
	* initialise schema in getgroupsbymember()
	* fix for tls_checkpeer; pass NULL session in to
	  set global option
	* BUG#77: configurable config file locations

181	Luke Howard <lukeh@padl.com>

	* ignore SIGPIPE whilst inside nss_ldap library routines
	  to prevent crashing on down LDAP server; possible fix
	  for Debian bug 130006
	* removed --enable-no-so-keepalive; always try to
	  disable SO_KEEPALIVE on underlying socket to LDAP
	  server
	* include local copy of irs.h under AIX
	* general cleanup of locking code
	* _nss_ldap_no_members appears to only need defining for
	  when RFC2307bis is enabled

180	Luke Howard <lukeh@padl.com>

	* pull in libpthreads on AIX 

179	Luke Howard <lukeh@padl.com>

	* a couple more patches for AIX

178	Luke Howard <lukeh@padl.com>

	* patch from Gabor Gombas for AIX support
	* Makefile.am: sasl.o needed by NSS_LDAP
	* aix_authmeth.c: method_passwordexpired is
	  really method_passwdexpired; but since the struct
	  was bzero()ed no need to set it to NULL
	* configure.in: support both gcc and xlc_r
	* exports.aix: sv_byport was not exported
	* ldap-grp.c: getgrset() returned group names instead of
	  gid numbers

177	Luke Howard <lukeh@padl.com>
