@@ -2,7 +2,7 @@ AC_INIT(ldap-nss.c)
 AC_CANONICAL_SYSTEM
 AC_PREFIX_DEFAULT()
 
-AM_INIT_AUTOMAKE(nss_ldap, 187)
+AM_INIT_AUTOMAKE(nss_ldap, 188)
 AM_CONFIG_HEADER(config.h)
 
 AC_PROG_CC
@@ -41,16 +41,18 @@ aix*) CPPFLAGS="$CPPFLAGS -D_THREAD_SAFE" ;;
 esac
 
 case "$target_os" in
-aix*) if test "$ac_compiler_gnu" = yes; then
-    nss_ldap_so_LDFLAGS="-Wl,-G -Wl,-bdynamic -Wl,-bnoentry -Wl,-bE:\$(srcdir)/exports.aix"
-  else
-    nss_ldap_so_LDFLAGS="-bM:SRE -bnoentry -bE:\$(srcdir)/exports.aix"
-  fi 
+aix*) nss_ldap_so_LD="ld"
+  nss_ldap_so_LDFLAGS="-bM:SRE -bnoentry -bE:\$(srcdir)/exports.aix"
   need_pthread=yes ;;
-solaris*) nss_ldap_so_LDFLAGS="-Wl,-Bdynamic -Wl,-M -Wl,\$(srcdir)/mapfile -Wl,-G" ;;
+solaris*) nss_ldap_so_LD="/usr/ccs/bin/ld"
+  nss_ldap_so_LDFLAGS="-Bdynamic -M $(srcdir)/mapfile -G" ;;
 *) nss_ldap_so_LDFLAGS="-shared -Wl,-Bdynamic" ;;
 esac
+
+AC_SUBST(nss_ldap_so_LD)
 AC_SUBST(nss_ldap_so_LDFLAGS)
+
+AM_CONDITIONAL(USE_NATIVE_LINKER, test -n "$nss_ldap_so_LD")
 
 if test -n "$with_ldap_dir"; then
   CPPFLAGS="$CPPFLAGS -I$with_ldap_dir/include"
